bindass-luxury-ecommerce/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bindass-server
  labels:
    app: bindass-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bindass-server
  template:
    metadata:
      labels:
        app: bindass-server
    spec:
      containers:
      - name: bindass-server
        image: bindass-server:latest
        ports:
        - containerPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bindass-client
  labels:
    app: bindass-client
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bindass-client
  template:
    metadata:
      labels:
        app: bindass-client
    spec:
      containers:
      - name: bindass-client
        image: bindass-client:latest
        ports:
        - containerPort: 80
