bindass-luxury-ecommerce/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bindass-server-service
spec:
  selector:
    app: bindass-server
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: bindass-client-service
spec:
  selector:
    app: bindass-client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
