bindass-luxury-ecommerce/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bindass-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: bindass-luxury.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: bindass-server-service
            port:
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bindass-client-service
            port:
              number: 80
